<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/EditText_vertical_height"
        android:background="@color/black"
        android:orientation="horizontal">
        <ImageView

            android:id="@+id/back_wodeziliao"
             style="@style/back_style"
           />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/EditText_height"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/gerenziliao_ziliao"
            android:textSize="@dimen/TextSize_18"
            />
        <TextView
            android:id="@+id/edit_wodeziliao"
            android:layout_width="@dimen/EditText_vertical_height"
            android:layout_height="@dimen/EditText_vertical_height"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:text="@string/edit_ziliao"
            android:textSize="@dimen/TextSize_18"
            />
    </RelativeLayout>
    <TextView
        style="@style/TextLine_10"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/liner_padding_personal_info" >

        <!--头像-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/EditText_vertical_height"
           >
            <TextView
            style="@style/left_wodeziliao"
                android:text="@string/toxiang_ziliao"
                />
            <com.chinalooke.yuwan.view.CircleImageView
                android:id="@+id/toxiang_wodeziliao"
                android:layout_width="@dimen/EditText_height"
                style="@style/right_wodeziliao"
                app:border_color="@color/orange"
                app:border_width="1dp"
                />
        </RelativeLayout>
        <View  style="@style/TextLine_1"/>
        <!--姓名-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/EditText_vertical_height"
            android:orientation="horizontal">
            <TextView
             style="@style/left_wodeziliao"
                android:text="@string/name_ziliao"
                />
            <TextView
                android:id="@+id/name_wodeziliao"
                style="@style/text_right_wodeziliao"
               />
        </RelativeLayout>
        <View  style="@style/TextLine_1"/>
        <!--性别-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/EditText_vertical_height"
            android:orientation="horizontal"
            >
            <TextView
               style="@style/left_wodeziliao"
                android:text="@string/sex_personal_info"
                />
            <TextView
                android:id="@+id/sex_wodeziliao"
             style="@style/text_right_wodeziliao"
               />
        </RelativeLayout>
        <View  style="@style/TextLine_1"/>
        <!--年龄-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/EditText_vertical_height"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/left_wodeziliao"
                android:text="@string/age_ziliao"
                />
            <TextView
                android:id="@+id/age_wodeziliao"
                style="@style/text_right_wodeziliao"
                />
        </RelativeLayout>
        <View  style="@style/TextLine_1"/>
        <!--玩龄-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/EditText_vertical_height"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/left_wodeziliao"
                android:text="@string/playage_personal_info"
                />
            <TextView
                android:id="@+id/playage_personal_info"
                style="@style/text_right_wodeziliao"
                />
        </RelativeLayout>
        <View  style="@style/TextLine_1"/>
        <!--所在地-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/EditText_vertical_height"
            android:orientation="horizontal"
            >
            <TextView
                style="@style/left_wodeziliao"
                android:text="@string/address_personal_info"
                />
            <TextView
                android:id="@+id/address_wodeziliao"
                style="@style/text_right_wodeziliao"
                />

        </RelativeLayout>
        <View  style="@style/TextLine_1"/>
        <!--身份证号-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/EditText_vertical_height"

            >
            <TextView

                style="@style/left_wodeziliao"
                android:text="@string/cardid_personal_info"
                />
            <TextView
                android:id="@+id/cardid_wodeziliao"
               style="@style/text_right_wodeziliao"
                />
        </RelativeLayout>
        <View  style="@style/TextLine_1"/>
        <!--二维码-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/EditText_vertical_height"
            >
            <TextView
                style="@style/left_wodeziliao"
                android:text="@string/erweima_ziliao"
                />
            <ImageView
                android:id="@+id/erweima_wodeziliao"
                android:layout_width="@dimen/EditText_height"
                style="@style/right_wodeziliao"
                />
        </RelativeLayout>
        <View  style="@style/TextLine_1"/>
        <!--个人说明-->
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/EditText_vertical_height"
            android:orientation="horizontal"
            >
            <TextView
              style="@style/left_wodeziliao"
                android:text="@string/gerenshuoming_personal_info"
                />
            <TextView
                android:id="@+id/gerenshuoming_wodezilaio"
                style="@style/text_right_wodeziliao"
                />
        </RelativeLayout>



    </LinearLayout>

</LinearLayout>


